--- a/main/style.css
+++ b/main/style.css
@@ -4,10 +4,10 @@
 
 @layer components {
   .link-active {
-    @apply flex  justify-center items-center xl:justify-start  text-blue-400;
+    @apply flex  justify-center items-center xl:justify-start  text-red-600;
   }
   .link {
-    @apply flex items-center justify-center  xl:justify-start text-gray-800 dark:text-white hover:text-blue-400 dark:hover:text-blue-400  transition duration-300 ease-in-out;
+    @apply flex items-center justify-center  xl:justify-start text-gray-800 dark:text-white hover:text-red-600 dark:hover:text-red-600  transition duration-300 ease-in-out;
   }
   .icon {
     @apply hidden xl:block xl:ml-4 font-bold;
@@ -44,3 +44,5 @@
     border: 2px solid #374151;
   }
 }
+
+
